--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: #e0c8c8;
             color: #333;
         }
         
@@ -135,7 +135,7 @@
 </head>
 <body>
     <h1>🤖 Chatbot GDCHAT</h1>
-    <h3>Digite sua mensagem abaixo:</h3>
+    <h3>o amigo virtual da Gestão Documental do TJMMG</h3>
     
     <div id="chat-container">
         <div id="chat-output"></div>
