--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #cfc8c8;
+            background-color: #F5F5F5;
             color: #333;
         }
         
