--- a/index.html
+++ b/index.html
@@ -131,6 +131,24 @@
                 width: 100%;
             }
         }
+
+        .site-footer {
+            text-align: center;
+            margin-top: 30px;
+            padding: 10px 0;
+            color: #666;
+            font-size: 0.85em;
+            border-top: 1px solid #eee;
+        }
+
+        .site-footer a {
+            color: #4285F4;
+            text-decoration: none;
+        }
+
+        .site-footer a:hover {
+            text-decoration: underline;
+        }        
     </style>
 </head>
 <body>
@@ -154,6 +172,10 @@
             </button>
         </div>
     </div>
+    <footer class="site-footer">
+        Desenvolvido por <a href="#" target="_blank">Yuri Antoniazzi</a> - © 2023
+    </footer>
+
 
     <script>
         // Configuration
