--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         
         h1 {
-            color: #4285F4;
+            color: #7b0000;
             text-align: center;
         }
         
