--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ function clearChat() {
     chatHistory = [];
     localStorage.removeItem('gdchat_history');
     chatOutput.innerHTML = '';
-    addSystemMessage("> Histórico limpo. Conversa reiniciada.");
+    addSystemMessage("/> Histórico limpo. Conversa reiniciada.");
 }
 
 // Event listeners
