--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ function initChat() {
     chatOutput.innerHTML = '';
     
     // Add welcome messages only if chat is empty
-    if (chatHistory.length === 0) {
+    if (chatHistory.length === 1) {
         addSystemMessage("=== Bem-vindo ao GDCHAT ===");
         addSystemMessage("Comandos especiais:");
         addSystemMessage("- 'sair', 'fim' ou 'exit' para encerrar");
@@ -415,7 +415,7 @@ function saveChatToCache() {
 // Send message to Gemini API
 async function sendMessage(message) {
     // Flood protection
-    if (Date.now() - lastMessageTime < 1000) {
+    if (Date.now() - lastMessageTime < 15000) {
         addSystemMessage("⚠️ Aguarde 1 segundo entre mensagens");
         return;
     }
@@ -539,7 +539,7 @@ function clearChat() {
     chatHistory = [];
     localStorage.removeItem('gdchat_history');
     chatOutput.innerHTML = '';
-    addSystemMessage("/> Histórico limpo. Conversa reiniciada.");
+    addSystemMessage("> Histórico limpo. Conversa reiniciada.");
 }
 
 // Event listeners
