--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🤖 Chatbot GDCHAT</title>
+    <title>🤖 GDCHAT</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -424,7 +424,7 @@ function saveChatToCache() {
 async function sendMessage(message) {
     // Flood protection
     if (Date.now() - lastMessageTime < 15000) {
-        addSystemMessage("⚠️ Aguarde 15 segundo entre mensagens");
+        addSystemMessage("⚠️ Aguarde 15 segundos entre mensagens");
         return;
     }
     lastMessageTime = Date.now();
