--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </style>
 </head>
 <body>
-    <h1>🤖 Chatbot GDCHAT</h1>
+    <h1>🤖 GDCHAT</h1>
     <h3>o amigo virtual da Gestão Documental do TJMMG</h3>
     
     <div id="chat-container">
