--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@ let lastScrollPosition = 0;
 // Quick replies
 const quickReplies = [
     "Corrigir textos ortograficamente:", 
-    "Em que você pode me ajudar??", 
-    "Quais são os Prazos de eliminação para documentos?",
+    "Em que você pode me ajudar?", 
+    
     
 ];
 
