--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         h1 {
             color: #7b0000;
             text-align: center;
+            font-size: 2.5rem;
+            font-weight: bold;
         }
         
         h3 {
@@ -133,6 +135,23 @@
             40% { content: '..'; }
             60%, 100% { content: '...'; }
         }
+        @media (max-width: 600px) {
+    #chat-output {
+        max-height: 300px;
+    }
+}
+.loader {
+  border: 4px solid #eee;
+  border-top: 4px solid #34a853;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  animation: spin 1s linear infinite;
+  margin: 10px auto;
+}
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
         
         .system-message {
             color: #666;
