--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>🤖 GDCHAT</h1>
-    <h3>o amigo virtual da Gestão Documental do TJMMG</h3>
+    <h3>O amigo virtual da Gestão Documental do TJMMG</h3>
     
     <div id="chat-container">
         <div id="bot-status">
